--- a/manifest.yml
+++ b/manifest.yml
@@ -2,6 +2,7 @@
 applications:
 - name: pal-tracker
   path: build/libs/pal-tracker.jar
-  random-route: true
+  routes:
+  - route: ps-pal-tracker-review.apps.chicken.pal.cfapps.io
   env:
-    WELCOME_MSG: Hello from Cloud Foundry YML!
+    WELCOME_MSG: Hello from the review environment
