--- a/manifest.yml
+++ b/manifest.yml
@@ -2,6 +2,6 @@
 applications:
 - name: pal-tracker
   path: build/libs/pal-tracker.jar
-  routes: true
+  route: true
   env:
     WELCOME_MSG: Hello from review environments
