--- a/manifest.yml
+++ b/manifest.yml
@@ -2,6 +2,6 @@
 applications:
 - name: pal-tracker2
   path: build/libs/pal-tracker.jar
-  route: true
+  random-route: true
   env:
-    WELCOME_MSG: Hello from review environments
+    WELCOME_MSG: Hello test for random route
