--- a/manifest.yml
+++ b/manifest.yml
@@ -2,6 +2,7 @@
 applications:
 - name: pal-tracker2
   path: build/libs/pal-tracker.jar
-  random-route: true
+  routes:
+  - route: ps.pal-tracker.review.apps.pal.cfapps.io
   env:
     WELCOME_MSG: Hello test for random route
